--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 				<h1>AnimeCon 2020</h1>
 				<nav>
 					<ul>
-						<li><a href="#intro">About AnimeCon</a></li>
+						<li><a href="#about">About AnimeCon</a></li>
 						<li><a href="#top-image">What to do</a></li>
 						<li><a href="#one">Whom to meet</a></li>
                         <li><a href="#two">Where to meet us</a></li>
@@ -201,20 +201,3 @@
 
 	</body>
 </html>
-
-/*
-
-https://ibb.co/WVymfwK
-https://ibb.co/X7csq3L
-https://ibb.co/xhvYXpN
-https://ibb.co/SmRjSvs
-https://ibb.co/m8Wm5BY
-
-
-https://ibb.co/6nsDXmn
-https://ibb.co/4sf98hL
-https://ibb.co/vZKZ2JT
-
-
-
-*/
