--- a/index.html
+++ b/index.html
@@ -128,10 +128,10 @@
 					<!-- Gallery  -->
 						<div class="gallery">
 							<article class="from-left">
-								<a href="https://i.ibb.co/njqK5dv/1.png" class="image fit"><img src="https://i.ibb.co/njqK5dv/1.png" title="The Gold Tier" alt="" /></a>
+								<a href="https://i.ibb.co/Br3QSWh/1.png" class="image fit"><img src="https://i.ibb.co/Br3QSWh/1.png" title="The Gold Tier" alt="" /></a>
 							</article>
 							<article class="from-right">
-								<a href="https://i.ibb.co/gw2QG35/2.png" class="image fit"><img src="https://i.ibb.co/gw2QG35/2.png" title="THe Gold Perks" alt="" /></a>
+								<a href="https://i.ibb.co/K7mZrZm/2.png" class="image fit"><img src="https://i.ibb.co/K7mZrZm/2.png" title="THe Gold Perks" alt="" /></a>
 							</article>
 							<article class="from-left">
 								<a href="https://i.ibb.co/tYNXQ6b/4.png" class="image fit"><img src="https://i.ibb.co/tYNXQ6b/4.png" title="The Silver Perks" alt="" /></a>
@@ -140,10 +140,10 @@
 								<a href="https://i.ibb.co/pwK2yRd/3.png" class="image fit"><img src="https://i.ibb.co/pwK2yRd/3.png" title="The Silver Tier" alt="" /></a>
 							</article>
 							<article class="from-left">
-								<a href="https://i.ibb.co/Ch8H4Dj/5.png" class="image fit"><img src="https://i.ibb.co/Ch8H4Dj/5.png" title="The Bronze Rier" alt="" /></a>
+								<a href="https://i.ibb.co/8cywZjs/5.png" class="image fit"><img src="https://i.ibb.co/8cywZjs/5.png" title="The Bronze Rier" alt="" /></a>
 							</article>
 							<article class="from-right">
-								<a href="https://i.ibb.co/J28dcyX/6.png" class="image fit"><img src="https://i.ibb.co/J28dcyX/6.png" title="The Bronze Perks" alt="" /></a>
+								<a href="https://i.ibb.co/khYRYyC/6.png" class="image fit"><img src="https://i.ibb.co/khYRYyC/6.png" title="The Bronze Perks" alt="" /></a>
 							</article>
 						</div>
 
@@ -204,7 +204,7 @@
 
 	</body>
 </html>
-<<<<<<< HEAD
-
-=======
->>>>>>> 2f0caaec5e2294450d04410356e13b0b4d67e393
+<a href="https://ibb.co/hZ94tQG"><img src="https://i.ibb.co/Br3QSWh/1.png" alt="1" border="0"></a>
+<a href="https://ibb.co/ctx5r5x"><img src="https://i.ibb.co/K7mZrZm/2.png" alt="2" border="0"></a>
+<a href="https://ibb.co/wsnqmKg"><img src="https://i.ibb.co/8cywZjs/5.png" alt="5" border="0"></a>
+<a href="https://ibb.co/fCmhmSw"><img src="https://i.ibb.co/khYRYyC/6.png" alt="6" border="0"></a>
